tests/sksl/errors/BadCaps.sksl
bool b = sk_Caps.bugFreeDriver;
